@@ -12,11 +12,11 @@ section of the gii Configuration inside your application configuration:
 					),
 				),
 
-After that, two new Generators 'FullCrud' and 'FullModel' should be available
-in your Gii index page.
+After that, the new Generators of the Gii Template Collection should be
+available in your Gii index page.
 
-Please note that you have to add 'ext.gtc.*' to your import path so the needed components 
-can be found by the application.
+Please note that you have to add 'ext.gtc.components.*' to your import path so
+the needed components can be found by the application.
 
 De, fr, lt, es, pt and sv translations are provided in the messages/
 directory. To make your Application use them, simply copy them over to the
